--- a/stylesheet.css
+++ b/stylesheet.css
@@ -150,7 +150,7 @@ h2 {
    ================ */
    
 body.dark-mode {
-    background-color: #000d27; /* #070f1b #121212 #070f1A */
+    background-color: #070f1b; /* #070f1b #121212 #070f1A */
     color: white;
 }
 
@@ -160,7 +160,7 @@ header button {
 }
 
 .dark-mode header button {
-    background-color: #000d27; 
+    background-color: #070f1b; 
 }
 
 .dark-mode .main-nav a::after {
@@ -175,7 +175,7 @@ header button {
     border-left: 1px dashed white;
     border-bottom: 1px dashed white;
     border-top: 1px dashed white;
-    background-image: url('/bilder/springe-zu-bg.png') !important;
+    background-image: url('/bilder/bg_dark_springe-zu.png') !important;
     background-size: cover; 
     background-position: center;
     background-repeat: no-repeat;
@@ -341,6 +341,10 @@ header button {
     border-left: 1px dashed #11113A;
     border-bottom: 1px dashed #11113A;
     border-top: 1px dashed #11113A;
+    background-image: url('/bilder/bg_bright_springe-zu.png');
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .springe-zu ul {
