--- a/stylesheet.css
+++ b/stylesheet.css
@@ -183,10 +183,22 @@ header button {
 
 .dark-mode #scrollToTopBtn {
     border: 1px dashed #2e66b9;
-    background-color: #ffffffbd;
+    background-image: url('/bilder/bg_dark_springe-zu.png') !important;
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-  
+.dark-mode #username, .dark-mode #password {
+    background-color: #070f1b !important;
+}
+
+.dark-mode #login-button {
+    color: green !important;
+    background-color: #070f1b !important;
+}
+
+
 /* ================
     Passwort-Form
    ================ */
@@ -455,6 +467,54 @@ header button {
     border-radius: 45px;
 }
 
+
+/* ================
+        Impressum
+   ================ */
+#imp-ja, #imp-nein {
+  background-color: transparent;
+  border: 1px solid #266DB6;
+  box-sizing: border-box;
+  color: #00132C;
+  font-family: "Avenir Next LT W01 Bold",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  padding: 16px 23px;
+  position: relative;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.#imp-ja:hover, #imp-nein:hover,
+.#imp-ja:active, #imp-nein:active {
+  outline: 0;
+}
+
+.#imp-ja:hover, #imp-nein:hover {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.#imp-ja:before, #imp-nein:before {
+  background-color: #D5EDF6;
+  content: "";
+  height: calc(100% + 3px);
+  position: absolute;
+  right: -7px;
+  top: -9px;
+  transition: background-color 300ms ease-in;
+  width: 100%;
+  z-index: -1;
+}
+
+.#imp-ja:hover:before, #imp-nein:hover:before {
+  background-color: #6DCFF6;
+}
+
+   
 /* ================
         Mobil
    ================ */
@@ -490,6 +550,31 @@ header button {
     .mobil {
         display: block;
     }
+    
+    .#imp-ja, #imp-nein {
+    padding: 16px 32px;
+  }
+  
+  
+        #results { 
+            display: none; /* Alles auf einmal verstecken */
+        }
+        
+        #chart { 
+            width: 100%; 
+            height: 30px; 
+            background: lightgray; 
+            position: relative; 
+        }
+        
+        #ja-bar, #nein-bar { 
+            height: 100%; 
+            position: absolute; 
+            width: 0%; 
+        }
+        
+        #ja-bar { background: green; }
+        #nein-bar { background: red; right: 0; }
 
 /*main*/
     main {
