--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,34 @@ main {
     display: none;
 }
 
+.click-svg {
+  width: 15px;
+  height: auto;
+  vertical-align: middle;
+}
+
+
+.rainbow-text {
+  background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
+  background-size: 400% 400%;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  animation: rainbow 5s ease infinite;
+}
+
+@keyframes rainbow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 .kopf {
     width: auto;
     height: 225px;
@@ -112,22 +140,78 @@ h2 {
     text-align: center;
 }
 
-.mitglieder-container {
-    display: flex;
-    justify-content: flex-start;
-}
-
-.vertikale-linie {
-    width: 1px;
-    height: 150px;
-    background-color: black;
-    margin-left: 50px;
-    margin-right: 20px;
+h4 {
+    font-size: 25px;
 }
 
 .impressum {
     margin-top: 13px;
 }
+
+
+/**/
+    .mitglieder-container {
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .m-info-row div {
+        margin-left: 50px;
+        margin-top: 2px;
+        margin-bottom: 20px;
+        border-left: 1px solid lightgrey;
+        padding-left: 5px;
+        max-width: 300px;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        overflow: auto; /* scrollbar */
+        white-space: normal;
+    }
+
+    .m-info td:nth-child(2) {
+        border-radius: 5px;
+        position: relative;
+        transition: transform 0.4s ease-out;
+    }
+
+    .m-info td:nth-child(2):hover::after {
+        transform: scaleX(1);
+    }
+
+    .m-info td:nth-child(2)::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #000;
+        transform: scaleX(0);
+        transform-origin: bottom left;
+        transition: transform 0.4s ease-out;
+    }
+
+    .vertikale-linie {
+        width: 1px;
+        height: 150px;
+        background-color: black;
+        margin-left: 150px;
+        margin-right: 20px;
+    }
+
+    #editable-text {
+        border: 1px dashed black;
+        border-radius: 8px;
+        width: 40%;
+        padding: 10px;
+        margin-top: 50px;
+
+    }
+
+    #edit-button, #logout-button {
+        background-color: white;
+        border: 0px;
+    }
 
 /**/
     .ergaenzungen p {
@@ -431,6 +515,37 @@ h2 {
     background-color: white;
 }
 
+#members-button:hover::after, #login-button-2:hover::after {
+    transform: scaleX(1);
+}
+
+#members-button::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform: scaleX(0);
+    transform-origin: bottom left;
+    transition: transform 0.8s ease-out;
+}
+
+#login-button-2::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.8s ease-out;
+}
+
+
 /* ================
       Impressum
    ================ */
@@ -490,26 +605,26 @@ h2 {
 }
 
   
-        #results { 
-            display: none; /* Alles auf einmal verstecken */
-        }
-        
-        #chart { 
-            width: 300px;
-            height: 30px; 
-            background: lightgray; 
-            position: relative; 
-            margin-top: 50px;
-        }
-        
-        #ja-bar, #nein-bar { 
-            height: 100%; 
-            position: absolute; 
-            width: 0%; 
-        }
-        
-        #ja-bar { background: green; }
-        #nein-bar { background: red; right: 0; }
+#results { 
+    display: none; /* Alles auf einmal verstecken */
+}
+
+#chart { 
+    width: 300px;
+    height: 30px; 
+    background: lightgray; 
+    position: relative; 
+    margin-top: 50px;
+}
+
+#ja-bar, #nein-bar { 
+    height: 100%; 
+    position: absolute; 
+    width: 0%; 
+}
+
+#ja-bar { background: green; }
+#nein-bar { background: red; right: 0; }
 
 
 /* ================
@@ -519,6 +634,10 @@ h2 {
     body {
         margin-top: 0px;
         padding-bottom: 100px;
+    }
+
+    h4 {
+        font-size: 20px;
     }
 
     .header-container {
@@ -554,7 +673,12 @@ h2 {
     
     .#imp-ja, #imp-nein {
         padding: 16px 32px;
-  }
+    }
+
+    #editable-text {
+        width: 90%;
+    }
+
 
 /*main*/
     main {
@@ -750,7 +874,7 @@ header button {
     background-color: white;
 }
 
-.dark-mode * {
+.dark-mode *:not(.rainbow-text) {
     color: white !important;
 }
 
@@ -781,7 +905,19 @@ header button {
     background-color: #070f1b !important;
 }
 
-.dark-mode #login-button-2, #members-button {
+.dark-mode #login-button-2, .dark-mode #members-button {
     color: white;
     background-color: #070f1b;
+}
+
+.dark-mode #edit-button, .dark-mode #logout-button {
+        background-color: #070f1b;
+}
+
+.dark-mode #editable-text {
+        border: 1px dashed white;
+}
+
+.dark-mode .click-svg {
+  content: url('../../bilder/click-dark.svg');
 }
