--- a/stylesheet.css
+++ b/stylesheet.css
@@ -208,7 +208,7 @@ h4 {
 
     }
 
-    #edit-button, #logout-button {
+    #edit-button, #logout-button, #members-button {
         background-color: white;
         border: 0px;
     }
