--- a/stylesheet.css
+++ b/stylesheet.css
@@ -144,6 +144,13 @@ h4 {
     font-size: 25px;
 }
 
+.click-svg {
+  width: 15px;
+  height: auto;
+  vertical-align: middle;
+  display: inline-block;
+}
+
 .impressum {
     margin-top: 13px;
 }
