--- a/stylesheet.css
+++ b/stylesheet.css
@@ -144,13 +144,6 @@ h4 {
     font-size: 25px;
 }
 
-.click-svg {
-  width: 15px;
-  height: auto;
-  vertical-align: middle;
-  display: inline-block;
-}
-
 .impressum {
     margin-top: 13px;
 }
@@ -215,7 +208,7 @@ h4 {
 
     }
 
-    #edit-button, #logout-button, #members-button {
+    #edit-button, #logout-button {
         background-color: white;
         border: 0px;
     }
@@ -325,7 +318,7 @@ h4 {
     margin-left: 10px;
 }
 
-.main-nav a {
+.main-nav a:not(.internetauftritt{
     color: #000;
     text-decoration: none;
     font-weight: bold;
@@ -333,6 +326,10 @@ h4 {
     border-radius: 5px;
     position: relative;
     transition: transform 0.4s ease-out;
+}
+
+.internetauftritt a {
+    font-weight: ;
 }
 
 .dark-mode main-nav a {
