--- a/stylesheet.css
+++ b/stylesheet.css
@@ -318,7 +318,7 @@ h4 {
     margin-left: 10px;
 }
 
-.main-nav a:not(.internetauftritt{
+.main-nav a:not(.internetauftritt) {
     color: #000;
     text-decoration: none;
     font-weight: bold;
@@ -326,10 +326,6 @@ h4 {
     border-radius: 5px;
     position: relative;
     transition: transform 0.4s ease-out;
-}
-
-.internetauftritt a {
-    font-weight: ;
 }
 
 .dark-mode main-nav a {
